adding complete code for file_checker context

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ env/
 .vscode/
 
 file_converter/__pycache__/
+file_converter/config/__pycache__/
 file_converter/data/__pycache__/
 file_converter/tests/__pycache__/
 
