--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@ env/
 #visual_studio_code
 .vscode/
 
-file_converter/__pycache__/
-file_converter/config/__pycache__/
-file_converter/data/__pycache__/
-file_converter/tests/__pycache__/
+__pycache__/
 
