--- a/.pylintrc
+++ b/.pylintrc
@@ -7,12 +7,13 @@ extension-pkg-whitelist=
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS
+ignore=CVS,tests
 
 disable=
     C0114,
     D203,
     D100,
+    D203,
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
